# botik-telebot

./: README.md  pyproject.toml  usage.py
src/botik_telebot/: app.py
src/botik_telebot/api/: api.py  api_type.py  send_message.py
src/botik_telebot/api/attachment_handlers/: photo_attachment_handler.py
src/botik_telebot/input/keyboard/: keyboard_markup.py  markup_factory.py
src/botik_telebot/input/keyboard/button/: button.py  button_factory.py
src/botik_telebot/input/message_handlers/: raw_message_handlers.py
src/botik_telebot/page/: page_factory.py
