[project]
name = "botik-telebot"
version = "0.0.1"
authors = [
  { name="dasstyx", email="dasstyx@example.com" },
]
description = "Extension for Botik to support pyTelegramBot"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
    "api",
    "framework",
    "bot",
    "tg",
    "messenger",
    "async",
    "botik",
]

[project.urls]
"Homepage" = "https://github.com/dasstyx/botik-telebot"
"Bug Tracker" = "https://github.com/dasstyx/botik-telebot/issues"

[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"